5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/4272/executions/1643_869.log
== TEST (2019-04-15 16:19:52) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
preco = float(input("preco sem desconto:"))
pagamento = float(input("valor a ser pago:"))
if(preco > pagamento):
	mensagem = "falta dinheiro"
	conta = (preco - pagamento)
esle:
	mensagem = "troco de"
	conta = (pagamento - preco)
print(mensagem, round(cont,2))
-- ERROR:
File "XXXX", line 9
    esle:
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 16:20:01) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
preco = float(input("preco sem desconto:"))
pagamento = float(input("valor a ser pago:"))
if(preco > pagamento):
	mensagem = "falta dinheiro"
	conta = (preco - pagamento)
else:
	mensagem = "troco de"
	conta = (pagamento - preco)
print(mensagem, round(cont,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    pagamento = float(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 16:20:51) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
preco = float(input("preco sem desconto:"))
pagamento = float(input("valor a ser pago:"))
if(preco > pagamento):
	mensagem = "falta dinheiro"
	conta = (preco - pagamento)
else:
	mensagem = "troco de"
	conta = (pagamento - preco)
print(mensagem, round(cont,2))
-- EXECUTION TIME:
0.172171
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1643/869/main.py", line 5, in <module>
    pagamento = float(input())
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 16:21:13) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
preco = float(input("preco sem desconto:"))
pagamento = float(input("valor a ser pago:"))
if(preco > pagamento):
	mensagem = "falta dinheiro"
	cont = (preco - pagamento)
else:
	mensagem = "troco de"
	conta = (pagamento - preco)
print(mensagem, round(cont,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    pagamento = float(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 16:21:16) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
preco = float(input("preco sem desconto:"))
pagamento = float(input("valor a ser pago:"))
if(preco > pagamento):
	mensagem = "falta dinheiro"
	cont = (preco - pagamento)
else:
	mensagem = "troco de"
	conta = (pagamento - preco)
print(mensagem, round(cont,2))
-- EXECUTION TIME:
0.123573
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1643/869/main.py", line 5, in <module>
    pagamento = float(input())
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 16:21:46) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
preco = float(input("preco sem desconto:"))
pagamento = float(input("valor a ser pago:"))
if(preco > pagamento):
	mensagem = "falta dinheiro"
	cont = (preco - pagamento)
else:
	mensagem = "troco de"
	cont = (pagamento - preco)
print(mensagem, round(cont,2))
-- EXECUTION TIME:
0.15025
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1643/869/main.py", line 5, in <module>
    pagamento = float(input())
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 16:22:46) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
preco = float(input("preco sem desconto:"))
pagamento = float(input("valor a ser pago:"))
if(preco > pagamento):
	mensagem = "falta dinheiro"
	cont = (preco - pagamento)
else:
	mensagem = "troco de"
	cont = (pagamento - preco)
print(mensagem, round(cont,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    pagamento = float(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 16:23:12) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
preco = float(input("preco sem desconto:"))
pagamento = float(input("valor a ser pago:"))
if(preco > pagamento):
	mensagem = "falta dinheiro"
	cont = (preco - pagamento)
else:
	mensagem = "troco de"
	cont = (pagamento - preco)
print(mensagem, round(cont,2))
-- EXECUTION TIME:
0.152315
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1643/869/main.py", line 5, in <module>
    pagamento = float(input())
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 16:23:22) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
preco = float(input("preco sem desconto:"))
pagamento = float(input("valor a ser pago:"))
if(preco > pagamento):
	mensagem = "falta dinheiro"
	cont = (preco - pagamento)
else:
	mensagem = "troco de"
	cont = (pagamento - preco)
print(mensagem, round(cont,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    pagamento = float(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 16:24:17) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
preco = float(input("preco sem desconto:"))
pagamento = float(input("valor a ser pago:"))
if(preco > pagamento):
	mensagem = "falta dinheiro"
	cont = (preco - pagamento)
else:
	mensagem = "troco de"
	cont = (pagamento - preco)
print(mensagem, round(cont,2))
-- EXECUTION TIME:
0.128044
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1643/869/main.py", line 5, in <module>
    pagamento = float(input())
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 16:24:39) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
preco = float(input("preco sem desconto:"))
pagamento = float(input("valor a ser pago:"))
if(preco > pagamento):
	mensagem = "falta dinheiro"
	cont = (preco - pagamento)
else:
	mensagem = "troco de"
	cont = (pagamento - preco)
print(mensagem, round(cont,2))
-- EXECUTION TIME:
0.152398
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1643/869/main.py", line 5, in <module>
    pagamento = float(input())
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 16:32:42) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
preco = float(input("preco sem desconto:"))
pagamento = float(input("valor a ser pago:"))
if(preco > pagamento):
	mensagem = "falta dinheiro"
	cont = (preco - pagamento)
else:
	mensagem = "troco de"
	cont = (pagamento - preco)
print(mensagem, round(cont,2))
-- EXECUTION TIME:
0.210085
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1643/869/main.py", line 5, in <module>
    pagamento = float(input())
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 16:33:09) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
preco = float(input("preco sem desconto:"))
pagamento = float(input("valor a ser pago:"))
if(preco > pagamento):
	mensagem = "falta dinheiro"
	cont = (preco - pagamento)
else:
	mensagem = "troco de"
	cont = (pagamento - preco)
print(mensagem, round(cont,2))
-- EXECUTION TIME:
0.227968
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1643/869/main.py", line 5, in <module>
    pagamento = float(input())
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 16:35:48) 
-- CODE:
preco = float(input("preco sem desconto:"))
pagamento = float(input("valor a ser pago:"))
if(preco > pagamento):
	mensagem = "falta dinheiro"
	cont = (preco - pagamento)
else:
	mensagem = "troco de"
	cont = (pagamento - preco)
print(mensagem, round(cont,2))
-- EXECUTION TIME:
0.165928
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1643/869/main.py", line 2, in <module>
    pagamento = float(input())
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 16:35:51) 
-- CODE:
preco = float(input("preco sem desconto:"))
pagamento = float(input("valor a ser pago:"))
if(preco > pagamento):
	mensagem = "falta dinheiro"
	cont = (preco - pagamento)
else:
	mensagem = "troco de"
	cont = (pagamento - preco)
print(mensagem, round(cont,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    pagamento = float(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
